prevents wrapping of probe titles

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -100,6 +100,7 @@ a, a:hover {
     border-bottom: 3px solid #000;
     font-size: 1.4em;
     font-weight: 700;
+    white-space: nowrap;
 }
 
 .probe .distance {
